# CNN

./: README.md  main.py  number_model.pkl  pyproject.toml  train.py
